--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -8,6 +8,10 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
     />
+    <link
+      rel="stylesheet"
+      href="/home/faiqge/PocketBootlegDesktop/src/renderer/src/assets/main.css"
+    />
   </head>
 
   <body>
